--- a/vue-music/package.json
+++ b/vue-music/package.json
@@ -11,14 +11,17 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
     "babel-runtime": "^6.26.0",
     "better-scroll": "^0.1.15",
     "fastclick": "^1.0.6",
     "jsonp": "^0.2.1",
+    "qs": "^6.5.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "vue": "^2.5.2",
+    "vue-lazyload": "^1.2.2",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
